# cmat

./: .gitmodules  CMakeLists.txt  readme.md
include/cmat/: angles.h  mat3d.h  mat3f.h  mat4f.h  rotations.h  vec.h  vec3d.h  vec3f.h
src/: angles.c  mat3d.c  mat3f.c  mat4f.c  rotations.c  vec.c  vec3d.c  vec3f.c
tests/: angle_tests.h  main.c  mat3f_tests.h  mat4f_tests.h  vec3f_tests.h
